Add styles for Olin display

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
 
@@ -29,31 +30,64 @@
     <h2 class="olin-laptops"><i class="fa fa-laptop icon-laptop" aria-hidden="true"></i> Laptops </h2>
 
     <div class="olin-laptops__availability">
+      <p>
+        <span class="device-count">10</span>
+        <i class="fa fa-apple device-icon" aria-hidden="true"></i>
+        <span class="available">available</span>
+      </p>
 
-      <div class="">
-        <p><span class="device-type__info--count">10</span></p>
-
-        <p class="device-type__info--availability"><i class="fa fa-apple device-type__info--icon" aria-hidden="true"></i> <span class="available">available</span></p>
-      </div>
-
-      <div class="">
-        <p><span class="device-type__info--count">10</span></p>
-
-        <p class="device-type__info--availability"><i class="fa fa-apple device-type__info--icon" aria-hidden="true"></i> <span class="available">available</span></p>
-      </div>
-
-
-
+      <p>
+        <span class="device-count">12</span>
+        <i class="fa fa-windows device-icon" aria-hidden="true"></i>
+        <span class="available">available</span>
+      </p>
 
     </div>
 
-    <h1 class="olin-phone-chargers">device</h1>
+    <!-- ---- -->
+
+
+    <h2 class="olin-phone-chargers">
+      <i class="fa fa-battery-quarter icon-charger" aria-hidden="true"></i> Phone Chargers
+    </h2>
+
     <div class="olin-phone-chargers__availability">
-      <div class="">iPhone4</div>
-      <div class="">Iphone 5 & up</div>
-      <div class="">Micro USB</div>
-      <div class="">USB-C</div>
+
+      <p>
+        <span class="device-count">3</span>
+        <span class="device-type__info--availability">iPhone 5 &amp; up </span>
+        <span class="available">unavailable</span>
+      </p>
+
+      <p>
+        <span class="device-count">3</span>
+        <span class="device-type__info--availability">Micro USB </span>
+        <span class="available">unavailable</span>
+      </p>
+
+      <p>
+        <span class="device-count">3</span>
+        <span class="device-type__info--availability">USB-C</span>
+        <span class="available">available</span>
+      </p>
+
+      <p>
+        <span class="device-count">3</span>
+        <span class="device-type__info--availability">iPhone 4 </span>
+        <span class="available">available</span>
+      </p>
+
+
     </div>
+
+
+
+
+
+
+
+
+
 
     <header class="uris-header">uris</header>
 
@@ -68,4 +102,5 @@
 
   <!--<script src="js/scripts.js"></script>-->
 </body>
+
 </html>
