Clean up Tweak css

--- a/index.html
+++ b/index.html
@@ -1,106 +1,120 @@
 <!doctype html>
 
 <html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <title></title>
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link rel="stylesheet" href="css/styles.css?v=1.0">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    <!--[if lt IE 9]>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
+    <![endif]-->
+  </head>
 
-<head>
-  <meta charset="utf-8">
+  <body>
+    <div class="grid">
+      <time>Sep 18 / 12:12PM</time>
 
-  <title></title>
-  <meta name="description" content="">
-  <meta name="author" content="">
+      <header class="olin-header">
+        <h1>olin</h1>
+      </header>
 
-  <link rel="stylesheet" href="css/styles.css?v=1.0">
-  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+      <h2 class="olin-laptops"><i class="fa fa-laptop icon-laptop" aria-hidden="true"></i> Laptops </h2>
 
-  <!--[if lt IE 9]>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
-  <![endif]-->
-</head>
+      <div class="olin-laptops__availability">
+        <p>
+          <span class="device-count">10</span>
+          <i class="fa fa-apple device-icon" aria-hidden="true"></i>
+          <span class="available">available</span>
+        </p>
+        <p>
+          <span class="device-count">12</span>
+          <i class="fa fa-windows device-icon" aria-hidden="true"></i>
+          <span class="available">available</span>
+        </p>
+      </div>
+      <h2 class="olin-phone-chargers">
+        <i class="fa fa-battery-quarter icon-charger" aria-hidden="true"></i> Phone Chargers
+      </h2>
+      <div class="olin-phone-chargers__availability">
+        <p>
+          <span class="device-count">3</span>
+          <span class="device-type__info--availability">iPhone 4 </span>
+          <span class="available">available</span>
+        </p>
+        <p>
+          <span class="device-count">3</span>
+          <span class="device-type__info--availability">iPhone 5 &amp; up </span>
+          <span class="available">available</span>
+        </p>
+        <p>
+          <span class="device-count">3</span>
+          <span class="device-type__info--availability">Micro USB </span>
+          <span class="available">available</span>
+        </p>
+        <p>
+          <span class="device-count">3</span>
+          <span class="device-type__info--availability">USB-C</span>
+          <span class="available">available</span>
+        </p>
+      </div>
 
-<body>
+      <header class="uris-header"><h1>Uris</h1></header>
 
-  <div class="grid">
+      <h2 class="uris-laptops"><i class="fa fa-laptop icon-laptop" aria-hidden="true"></i> Laptops </h2>
 
-    <time>Sep 18 / 12:12PM</time>
+      <div class="uris-laptops__availability">
 
-    <header class="olin-header">
-      <h1>olin</h1>
-    </header>
+        <p>
+          <span class="device-count">10</span>
+          <i class="fa fa-apple device-icon" aria-hidden="true"></i>
+          <span class="available">available</span>
+        </p>
 
-    <h2 class="olin-laptops"><i class="fa fa-laptop icon-laptop" aria-hidden="true"></i> Laptops </h2>
+        <p>
+          <span class="device-count">12</span>
+          <i class="fa fa-windows device-icon" aria-hidden="true"></i>
+          <span class="available">available</span>
+        </p>
 
-    <div class="olin-laptops__availability">
-      <p>
-        <span class="device-count">10</span>
-        <i class="fa fa-apple device-icon" aria-hidden="true"></i>
-        <span class="available">available</span>
-      </p>
+      </div>
 
-      <p>
-        <span class="device-count">12</span>
-        <i class="fa fa-windows device-icon" aria-hidden="true"></i>
-        <span class="available">available</span>
-      </p>
+      <h2 class="uris-phone-chargers">
+        <i class="fa fa-battery-quarter icon-charger" aria-hidden="true"></i> Phone Chargers
+      </h2>
 
-    </div>
+      <div class="uris-phone-chargers__availability">
 
-    <!-- ---- -->
+        <p>
+          <span class="device-count">3</span>
+          <span class="device-type__info--availability">iPhone 5 &amp; up </span>
+          <span class="available">available</span>
+        </p>
 
+        <p>
+          <span class="device-count">3</span>
+          <span class="device-type__info--availability">Micro USB </span>
+          <span class="available">available</span>
+        </p>
 
-    <h2 class="olin-phone-chargers">
-      <i class="fa fa-battery-quarter icon-charger" aria-hidden="true"></i> Phone Chargers
-    </h2>
+        <p>
+          <span class="device-count">3</span>
+          <span class="device-type__info--availability">USB-C</span>
+          <span class="available">available</span>
+        </p>
 
-    <div class="olin-phone-chargers__availability">
+        <p>
+          <span class="device-count">3</span>
+          <span class="device-type__info--availability">iPhone 4 </span>
+          <span class="available">available</span>
+        </p>
 
-      <p>
-        <span class="device-count">3</span>
-        <span class="device-type__info--availability">iPhone 5 &amp; up </span>
-        <span class="available">unavailable</span>
-      </p>
+      </div>
 
-      <p>
-        <span class="device-count">3</span>
-        <span class="device-type__info--availability">Micro USB </span>
-        <span class="available">unavailable</span>
-      </p>
+      <!--<script src="js/scripts.js"></script>-->
 
-      <p>
-        <span class="device-count">3</span>
-        <span class="device-type__info--availability">USB-C</span>
-        <span class="available">available</span>
-      </p>
-
-      <p>
-        <span class="device-count">3</span>
-        <span class="device-type__info--availability">iPhone 4 </span>
-        <span class="available">available</span>
-      </p>
-
-
-    </div>
-
-
-
-
-
-
-
-
-
-
-    <header class="uris-header">uris</header>
-
-    <h2 class="uris-laptops">device</h2>
-    <div class="uris-laptops__availability">
-    </div>
-
-    <h1 class="uris-phone-chargers">device</h1>
-    <div class="uris-phone-chargers__availability">info2</div>
-
-  </div>
-
-  <!--<script src="js/scripts.js"></script>-->
-</body>
+  </body>
 
 </html>
